layouts and pages done

--- a/src/_sass/base/_cv.scss
+++ b/src/_sass/base/_cv.scss
@@ -1,54 +1,21 @@
-
-
-
-
 .resume-section {
-  padding-top: 2rem;
-  margin-bottom: 2rem;
-  border-top: 1px dashed rgba(0,0,0,0.1);
-}
-
-.resume-section:last-of-type {
-  padding-bottom: 3rem;
-  margin-bottom: 0;
-}
-
-.resume-section:last-of-type {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 .resume-section > .heading {
   margin-top: 0;
 }
 
-
-/* Header */
+/* SECTION: Social Icons */
 /* —————————————————————————————— */
 
-.main-header {
-  padding-bottom: 2rem;
-}
+.cv-social-links {
+  .icon {
 
-.main-header .heading {
-  margin: 0;
-  padding-top: 2rem;
-  line-height: 1.6;
-}
-
-.main-header .subheading {
-  margin: 0;
-  font-size: 0.9rem;
-}
-
-.social-links {
-  font-size: 0.9rem;
-}
-
-  .social-links a {
     display: block;
   }
-
-/* SECTION: Summary */
-/* —————————————————————————————— */
+}
 
 
 /* SECTION: Skills */
@@ -59,8 +26,8 @@
 }
 
 .skill-list .list {
-  list-style-type: none;
-  padding-left: 0;
+  // list-style-type: none;
+  // padding-left: 0;
 }
 
 .skill-list .item {
@@ -68,7 +35,7 @@
 }
 
 .skill-list .item::before {
-  content: "\f0da\0020";
+  // content: "\f0da\0020";
 }
 
 .skill-list .item.separator {
