--- a/src/_sass/base/_layout.scss
+++ b/src/_sass/base/_layout.scss
@@ -4,10 +4,9 @@
 .wrapper {
   max-width: 40rem;
   margin: 0 auto;
+  padding: 0 1.5rem;
 }
 
-@media (max-width: 40rem) {
-  .wrapper {
-    border-radius: 0;
-  }
+.footer-push {
+  min-height: calc(100vh - 165px);
 }
