--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,4 +1,43 @@
     <!-- Footer -->
+    <footer>
+
+      <div class="social-links">
+        <a class="icon" href="https://github.com/pedrobritto" title="GitHub">
+          <i class="fa fa-github-alt" aria-hidden="true"></i>
+        </a>
+        <a class="icon" href="http://codepen.io/pedrobritto/" title="Codepen">
+          <i class="fa fa-codepen" aria-hidden="true"></i>
+        </a>
+        <a class="icon" href="https://www.linkedin.com/in/pedro-britto/" title="LinkedIn">
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
+        <a class="icon" href="mailto:pedroivobritto@gmail.com" title="Email">
+          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </a>
+        <a class="icon" href="/cv/" title="Meu Currículo">
+          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+        </a>
+      </div>
+
+      <div class="legal">
+        <small>&copy; Pedro Britto, 2017</small>
+      </div>
+
+    </footer>
     </div> <!-- /wrapper -->
+
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-51253396-4', 'auto');
+      ga('send', 'pageview');
+    </script>
+    <!-- /Google Analytics -->
+
   </body>
 </html>
+<!-- Built with Jekyll -->
