--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,13 +1,14 @@
 <header class="main-header">
   <h1 class="logo">
-    <a href="/">Pedro Britto</a>
+    <a class="text" href="/">Pedro Britto</a>
   </h1>
 
   <nav class="main-nav">
     <ul>
-      <li class="item"><a href="">Home</a></li>
-      <li class="item"><a href="">Blog</a></li>
-      <li class="item"><a href="">Projetos</a></li>
+      <li class="item"><a href="{{ site.baseurl }}/">Início</a></li>
+      <li class="item"><a href="{{ site.baseurl }}/blog/">Artigos</a></li>
+      <li class="item"><a href="{{ site.baseurl }}/notas/">Notas</a></li>
+      <li class="item"><a href="{{ site.baseurl }}/portfolio/">Portfólio</a></li>
     </ul>
   </nav>
 </header>
