--- a/src/_layouts/blog.html
+++ b/src/_layouts/blog.html
@@ -1,15 +1,26 @@
 {% include head.html %}
+
+<div class="footer-push">
   {% include header.html %}
 
-  {{ content }}
-  <!-- Working! -->
-  {% for post in site.posts %}
+    <h1 class="blog-title">{{ page.title }}</h1>
 
-    <a href="{{ post.permalink }}">
-      <h2>{{ post.title }}</h2>
-    </a>
-    <p>{{ post.description }}</p>
+    {% if site.posts | size == 0 %}
+      <p>Ainda não tenho nenhum artigo pronto!</p>
+    {% endif %}
 
-  {% endfor %}
+    {% for post in site.posts %}
+
+      <article class="post-summary">
+        <h2 class="title">
+          <a href="{{ post.permalink }}">{{ post.title }}</a>
+        </h2>
+
+        <p class="description">{{ post.description }}</p>
+        <a class="button" href="{{ post.permalink }}">Leia Mais</a>
+      </article>
+
+    {% endfor %}
+</div>
 
 {% include footer.html %}
