--- a/src/_layouts/page.html
+++ b/src/_layouts/page.html
@@ -3,6 +3,7 @@
 <div class="footer-push">
   {% include header.html %}
 
+  <h1 class="blog-title">{{ page.title }}</h1>
   <div class="content">
     {{ content }}
   </div>
