--- a/src/_sass/base/_base.scss
+++ b/src/_sass/base/_base.scss
@@ -1,18 +1,9 @@
 /* Base  */
 /* —————————————————————————————— */
 
-/*
-Break Points:
-
-- 40rem
-- 450px
-
-*/
-
 html {
   box-sizing: border-box;
   font-size: 16px;
-  color: red;
 }
 
 *,
@@ -22,24 +13,25 @@ html {
 }
 
 body {
-  background-color: #fbfaf5;
+  margin: 0;
+  padding: 0;
+  // background-color: #fbfaf5;
+  // background-color:;
   font-family: 'Merriweather Sans', sans-serif;
-  font-weight: 300;
   line-height: 1.8;
   color: #323236;
 }
 
 @media (min-width: 40rem) {
   body {
-    padding: 1.5rem 0 0;
+    // padding: 1.5rem 0 0;
   }
 }
 
 a {
-  color: #f1946c;
-  font-weight: bold;
+  color: $c-primary;
+  // font-weight: bold;
   text-decoration: none;
-  transition: .2s;
 }
 
 a:hover,
@@ -55,5 +47,5 @@ ul {
 blockquote {
   margin: 1.5rem 0;
   padding-left: .75rem;
-  border-left: 3px solid #f1946c;
+  border-left: 3px solid $c-primary;
 }
