--- a/src/_sass/base/_typography.scss
+++ b/src/_sass/base/_typography.scss
@@ -5,7 +5,10 @@ p {
   margin-top: 0;
 }
 
-h1, h2, h3 {
-  font-weight: 800;
+h1, h2, h3, h4, h5, h6 {
+  font-style: normal;
+  font-family: 'Merriweather', serif;
+  font-weight: 700;
   margin: 1rem 0;
+  line-height: 1.3;
 }
