--- a/src/_sass/components/_footer.scss
+++ b/src/_sass/components/_footer.scss
@@ -2,13 +2,16 @@
 /* —————————————————————————————— */
 
 footer {
-  padding: 2rem 0;
-  text-align: center;
-  font-weight: bold;
+  padding: 1.5rem 0;
   font-size: .85rem;
-  opacity: .5;
-}
+  text-align: center;
+  opacity: .7;
 
-footer p {
-  margin: 0;
+  margin-top: 2rem;
+  border-top: $base-border;
+
+  .legal {
+    margin-top: 1rem;
+    font-weight: bold;
+  }
 }
