--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <nav class="main-nav">
     <ul>
       <li class="item"><a href="{{ site.baseurl }}/">Início</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/blog/">Artigos</a></li>
+      <li class="item"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
       <li class="item"><a href="{{ site.baseurl }}/notas/">Notas</a></li>
       <li class="item"><a href="{{ site.baseurl }}/portfolio/">Portfólio</a></li>
     </ul>
