--- a/_sass/base/_config.scss
+++ b/_sass/base/_config.scss
@@ -1,9 +1,13 @@
 // Colors
 
-// $c-primary: #f1946c;
-$c-primary: #f16c6c;
+$c-primary: #54afe9;
+// $c-primary: #6cadf1;
+// $c-primary: #f16c6c;
 
 $base-border: 2px solid rgba($c-primary, 0.1);
 
 // Break Points
 $break-header: '(min-width: 580px)';
+
+// Other
+$footer-height: 165px;
