--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,8 +1,12 @@
-.post {
+.blog-post {
   margin-bottom: 2rem;
 
   .heading {
     font-size: 2rem;
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    margin-top: 2rem;
+    font-weight: bold;
+  }
 }
