--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 {% include head.html %}
   {% include header.html %}
 
-  <article class="post">
+  <article class="blog-post">
     <header>
       <h1 class="heading">{{ page.title }}</h1>
     </header>
