--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -8,7 +8,7 @@ p {
 h1, h2, h3, h4, h5, h6 {
   font-style: normal;
   font-family: 'Merriweather', serif;
-  font-weight: 700;
+  font-weight: normal;
   margin: 1rem 0;
   line-height: 1.3;
 }
