--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,19 +3,19 @@
 
       <div class="social-links">
         <a class="icon" href="https://github.com/pedrobritto" title="GitHub">
-          <i class="fa fa-github-alt" aria-hidden="true"></i>
+          <i class="icon-github" aria-hidden="true"></i>
         </a>
         <a class="icon" href="http://codepen.io/pedrobritto/" title="Codepen">
-          <i class="fa fa-codepen" aria-hidden="true"></i>
+          <i class="icon-codepen" aria-hidden="true"></i>
         </a>
         <a class="icon" href="https://www.linkedin.com/in/pedro-britto/" title="LinkedIn">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
+          <i class="icon-linkedin" aria-hidden="true"></i>
         </a>
         <a class="icon" href="mailto:pedroivobritto@gmail.com" title="Email">
-          <i class="fa fa-envelope-o" aria-hidden="true"></i>
+          <i class="icon-mail" aria-hidden="true"></i>
         </a>
         <a class="icon" href="/cv/" title="Meu Currículo">
-          <i class="fa fa-file-text-o" aria-hidden="true"></i>
+          <i class="icon-doc-text" aria-hidden="true"></i>
         </a>
       </div>
 
