--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@
 // base
 @import "base/config";
 @import "base/base";
+@import "base/fonts";
 @import "base/layout";
 @import "base/typography";
 @import "base/cv";
