--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
 
   <nav class="main-nav">
     <ul>
-      <li class="item"><a href="{{ site.baseurl }}/">Início</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/notas/">Notas</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/portfolio/">Portfólio</a></li>
+      <li class="item"><a href="{{ site.url }}/">Início</a></li>
+      <li class="item"><a href="{{ site.url }}/blog/">Blog</a></li>
+      <li class="item"><a href="{{ site.url }}/notas/">Notas</a></li>
+      <li class="item"><a href="{{ site.url }}/portfolio/">Portfólio</a></li>
     </ul>
   </nav>
 </header>
