--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
         <a class="icon" href="mailto:pedroivobritto@gmail.com" title="Email">
           <i class="icon-mail" aria-hidden="true"></i>
         </a>
-        <a class="icon" href="/cv/" title="Meu Currículo">
+        <a class="icon" href="{{ site.url }}/cv/" title="Meu Currículo">
           <i class="icon-doc-text" aria-hidden="true"></i>
         </a>
       </div>
