--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header class="main-header">
   <h1 class="logo">
-    <a class="text" href="/">Pedro Britto</a>
+    <a class="text" href="{{ site.url }}">Pedro Britto</a>
   </h1>
 
   <nav class="main-nav">
     <ul>
-      <li class="item"><a href="{{ site.baseurl }}/">Início</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/blog/">Blog</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/notas/">Notas</a></li>
-      <li class="item"><a href="{{ site.baseurl }}/portfolio/">Portfólio</a></li>
+      <li class="item"><a href="{{ site.url }}/">Início</a></li>
+      <li class="item"><a href="{{ site.url }}/blog/">Blog</a></li>
+      <li class="item"><a href="{{ site.url }}/notas/">Notas</a></li>
+      <li class="item"><a href="{{ site.url }}/portfolio/">Portfólio</a></li>
     </ul>
   </nav>
 </header>
