--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,12 +1,15 @@
 {% include head.html %}
-  {% include header.html %}
+  <div class="footer-push">
+    {% include header.html %}
 
-  <article class="blog-post">
-    <header>
-      <h1 class="heading">{{ page.title }}</h1>
-    </header>
-    {{ content }}
-  </article>
+    <article class="blog-post">
+      <header>
+        <h1 class="heading">{{ page.title }}</h1>
+      </header>
+      {{ content }}
+    </article>
 
-  {% include disqus.html %}
+    {% include social-share.html %}
+    {% include disqus.html %}
+  </div>
 {% include footer.html %}
