--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -15,23 +15,15 @@ html {
 body {
   margin: 0;
   padding: 0;
-  // background-color: #fbfaf5;
-  // background-color:;
   font-family: 'Merriweather Sans', sans-serif;
   line-height: 1.8;
   color: #323236;
 }
 
-@media (min-width: 40rem) {
-  body {
-    // padding: 1.5rem 0 0;
-  }
-}
-
 a {
   color: $c-primary;
-  // font-weight: bold;
   text-decoration: none;
+  transition: .2s;
 }
 
 a:hover,
@@ -48,4 +40,16 @@ blockquote {
   margin: 1.5rem 0;
   padding-left: .75rem;
   border-left: 3px solid $c-primary;
+}
+
+::selection {
+	color: white;
+	background-color: $c-primary;
+	text-shadow: none;
+}
+
+::-moz-selection {
+	color: white;
+	background-color: $c-primary;
+	text-shadow: none;
 }
