--- a/_includes/blog-roll.html
+++ b/_includes/blog-roll.html
@@ -2,11 +2,11 @@
 
   <article class="post-summary">
     <h2 class="title">
-      <a href="{{ post.permalink }}">{{ post.title }}</a>
+      <a href="{{ post.url }}">{{ post.title }}</a>
     </h2>
 
     <p class="description">{{ post.description }}</p>
-    <a class="button" href="{{ post.permalink }}">Leia Mais</a>
+    <a class="button" href="{{ post.url }}">Leia Mais</a>
   </article>
 
 {% endfor %}
