--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -11,8 +11,8 @@ loadComments.addEventListener('click', function() {
 
   // disqus variables
   var disqus_config = function () {
-    this.page.url = '{{ site.baseurl }}{{ page.permalink }}';
-    this.page.identifier = '{{ page.permalink }}';
+    this.page.url = '{{ site.baseurl }}{{ page.url }}';
+    this.page.identifier = '{{ page.url }}';
   };
 
   // load disqus
