--- a/_includes/social-share.html
+++ b/_includes/social-share.html
@@ -1,1 +1,12 @@
-<div class="sharethis-inline-share-buttons"></div>
+<!-- <div class="sharethis-inline-share-buttons"></div> -->
+
+<div class="social-share">
+  <ul class="social">
+    <li>
+      <a class="social-facebook" target="_blank" rel="nofollow" href="https://www.facebook.com/sharer.php?u=https://pedrobritto.github.io{{ page.url }}"></a></li>
+    <li>
+      <a class="social-twitter" target="_blank" rel="nofollow" href="https://twitter.com/intent/tweet?text={{ page.title }}:&url={{ site.url }}{{ page.url }}&via={{ site.username_twitter }}&related={{ site.username_twitter }}"></a></li>
+    <li>
+      <a class="social-linkedin social-icon-last" target="_blank" rel="nofollow" href="http://www.linkedin.com/shareArticle?mini=true&url={{ site.url }}{{ page.url }}&title={{ page.title }}"></a></li>
+  </ul>
+</div>
