--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,7 +9,7 @@
 
     <article class="post-summary">
       <h2 class="title">
-        <a href="{{ post.permalink }}">{{ post.title }}</a>
+        <a href="{{ post.url }}">{{ post.title }}</a>
       </h2>
 
       {% if post.excerpt %}
@@ -18,7 +18,7 @@
       <p class="description">{{ post.description }}</p>
       {% endif %}
 
-      <a class="button" href="{{ post.permalink }}">Leia Mais</a>
+      <a class="button" href="{{ post.url }}">Leia Mais</a>
     </article>
 
   {% endfor %}
