--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,7 +49,10 @@
     <meta name="msapplication-square310x310logo" content="{{ site.url }}/assets/img/favicon/mstile-310x310.png">
 
     <!-- OG -->
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ page.excerpt }}">
     <meta property="og:image" content="{{ site.url }}/assets/img/og/og-pedrobritto.png">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
   </head>
 
