tweaks main-header

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
       </div>
 
       <div class="legal">
-        <small>&copy; Pedro Britto, 2017</small>
+        <small>&copy; Pedro Britto | Built with Jekyll</small>
       </div>
 
     </footer>
@@ -40,4 +40,3 @@
 
   </body>
 </html>
-<!-- Built with Jekyll -->
