--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,7 +50,7 @@
 
     <!-- OG -->
     <meta property="og:title" content="{{ page.title }}">
-    <meta property="og:description" content="{{ page.excerpt }}">
+    <meta property="og:description" content="{{ page.description }}">
     <meta property="og:image" content="{{ site.url }}/assets/img/og/pedrobritto.png">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
 
