--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,11 +4,9 @@
   </h1>
 
   <nav class="main-nav">
-    <ul>
-      <li class="item"><a href="{{ site.url }}/">Início</a></li>
-      <li class="item"><a href="{{ site.url }}/blog/">Blog</a></li>
-      <li class="item"><a href="{{ site.url }}/notas/">Notas</a></li>
-      <li class="item"><a href="{{ site.url }}/portfolio/">Portfólio</a></li>
-    </ul>
+    <a class="item" href="{{ site.url }}/">Início</a>
+    <a class="item" href="{{ site.url }}/blog/">Blog</a>
+    <a class="item" href="{{ site.url }}/notas/">Notas</a>
+    <a class="item" href="{{ site.url }}/portfolio/">Portfólio</a>
   </nav>
 </header>
