fixes jekyll front matter for meta description

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -7,7 +7,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   font-style: normal;
-  font-family: 'Merriweather', serif;
+  font-family: 'Source Serif Pro', serif;
   font-weight: bold;
   margin: 1rem 0;
   line-height: 1.3;
