--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,8 +23,9 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,800" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700,900" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700" rel="stylesheet">
+    
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-196x196.png" sizes="196x196">
     <link rel="icon" type="image/png" href="{{ site.url }}/assets/img/favicon/favicon-96x96.png" sizes="96x96">
