--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="main-header">
   <h1 class="logo">
-    <a class="text" href="{{ site.url }}">Pedro Britto</a>
+    <a class="text" href="{{ site.url }}">pedrobritto</a>
   </h1>
 
   <nav class="main-nav">
