--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -15,7 +15,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather Sans', sans-serif;
+  font-family: $font-sans;
   line-height: 1.8;
   color: #323236;
 }
