--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -6,9 +6,10 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-style: normal;
-  font-family: 'Source Serif Pro', serif;
+  font-family: $font-serif;
   font-weight: bold;
-  margin: 1rem 0;
+  font-style: normal;
   line-height: 1.3;
+
+  margin: 1rem 0;
 }
