--- a/_sass/base/_cv.scss
+++ b/_sass/base/_cv.scss
@@ -7,44 +7,31 @@
   margin-top: 0;
 }
 
-/* SECTION: Social Icons */
+/* SECTION: Skills */
 /* —————————————————————————————— */
 
-.cv-social-links {
-  .icon {
 
-    display: block;
+.skill-list {
+
+  h3 {
+    margin-top: 2rem;
+  }
+
+  .item {
+    margin-bottom: .5rem;
+  }
+
+  .item.separator {
+    font-weight: bold;
+    opacity: 0.5;
+    margin-top: 1.5rem;
   }
 }
 
 
-/* SECTION: Skills */
-/* —————————————————————————————— */
+/* skill levels */
 
-.skill-list h3 {
-  margin-top: 2rem;
-}
-
-.skill-list .list {
-  // list-style-type: none;
-  // padding-left: 0;
-}
-
-.skill-list .item {
-  margin-bottom: .5rem;
-}
-
-.skill-list .item::before {
-  // content: "\f0da\0020";
-}
-
-.skill-list .item.separator {
-  font-weight: bold;
-  opacity: 0.5;
-  margin-top: 1.5rem;
-}
-
-.skill-list .score {
+.score {
   color: white;
   border-radius: 3px;
   padding: 0.35rem .5rem;
@@ -52,77 +39,66 @@
 
   font-size: .75rem;
   font-weight: 400;
-}
 
-/* skill levels */
-
-  .score.lvl-1 {
+  &.lvl-1 {
     background-color: #4CC2D8;
-  }
-    .score.lvl-1::after {
+
+    &::after {
       content: "Básico";
     }
-
-  .score.lvl-2 {
-    background-color: #996cdd;
   }
-    .score.lvl-2::after {
+
+  &.lvl-2 {
+    background-color: #996cdd;
+
+    &::after {
       content: "Médio";
     }
+  }
 
-  .score.lvl-3 {
+  &.lvl-3 {
     background-color: #F95471;
-  }
-    .score.lvl-3::after {
+
+    &::after {
       content: "Avançado";
     }
-
-  .score.lvl-4 {
-    background-color: #ee9f37;
   }
-    .score.lvl-4::after {
-      content: "Avançado";
-    }
-
-  .score.lvl-5 {
-    background-color: #f25050;
-  }
-    .score.lvl-5::after {
-      content: "Mestre";
-    }
+}
 
 
 /* SECTION: Education */
 /* —————————————————————————————— */
 
 .education-list {
+
   list-style-type: none;
   padding-left: 0;
-}
 
-.education-list .summary {
-  margin-bottom: .5rem;
-}
+  .summary {
+    // margin-bottom: .5rem;
 
-.education-list .summary .course {
-  margin-bottom: 0;
-}
+    .course {
+      margin-bottom: 0;
+    }
 
-.education-list .summary .institution {
-  font-weight: bold;
-}
-
-.education-list .item {
-  margin-bottom: 1.5rem;
-}
-
-  .education-list .item .date {
-    /*font-size: 0.9em;*/
+    .institution {
+      font-weight: bold;
+    }
   }
 
-  .education-list .item .highlight {
-    font-weight: bold;
+
+  .item {
+    margin-bottom: 2rem;
+
+    .date {
+      /*font-size: 0.9em;*/
+    }
+
+    .highlight {
+      font-weight: bold;
+    }
   }
+}
 
 
 /* SECTION: Experiences */
@@ -130,23 +106,23 @@
 
 .job-entry .summary {
   margin-bottom: 1rem;
-}
 
-  .job-entry .summary .rolename {
+  .rolename {
     margin-bottom: 0;
   }
 
-  .job-entry .summary .period {
+  .period {
     font-size: 0.9rem;
     /*opacity: 0.5;*/
   }
+}
 
 .job-entry .activities {
   padding-left: 1.5rem;
 }
 
+.job-entry .activities .item {
   @media (max-width: 40rem) {
-    .job-entry .activities .item {
-      padding-bottom: .5rem;
-    }
+    padding-bottom: .5rem;
   }
+}
