new post, style changes

--- a/_sass/base/_config.scss
+++ b/_sass/base/_config.scss
@@ -1,10 +1,12 @@
 // Colors ------------------------
 $c-primary: #54afe9;
 
+$c-font-dark: #323232;
+
 
 // Font Stacks
-$font-serif: 'Source Serif Pro', serif;
-$font-sans : 'Merriweather Sans', sans-serif;
+$font-heading: 'Source Serif Pro', serif;
+$font-sans : 'Lato', sans-serif;
 
 
 // Break Points -----------------------
