--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -13,11 +13,11 @@ html {
 }
 
 body {
+  font-family: $font-sans;
+  font-size: 19px;
+  color: #323236;
   margin: 0;
   padding: 0;
-  font-family: $font-sans;
-  line-height: 1.8;
-  color: #323236;
 }
 
 a {
@@ -30,6 +30,7 @@ a:hover,
 a:active {
   opacity: 0.75;
 }
+
 
 ul {
   padding-left: 1.5rem;
