--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -2,11 +2,15 @@
 /* —————————————————————————————— */
 
 p {
+  font-weight: normal;
+  font-size: 19px;
+  line-height: 1.5;
+
   margin-top: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $font-serif;
+  font-family: $font-heading;
   font-weight: bold;
   font-style: normal;
   line-height: 1.3;
