--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -3,7 +3,7 @@
   font-size: .9rem;
   color: white;
   background-color: $c-primary;
-  padding: .6rem 1.2rem;
+  padding: 1rem 1.2rem;
   border-radius: 3px;
   border: 0;
 }
@@ -14,7 +14,7 @@
   width: 100%;
 
   font-family: inherit;
-  font-size: inherit;
+  font-size: 1rem;
   margin: 1rem 0;
   transition: .3s;
 
