--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -1,12 +1,35 @@
 .blog-post {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 
   .heading {
-    font-size: 2rem;
+    font-size: 3rem;
+    margin-bottom: 1rem;
   }
 
   h1, h2, h3, h4, h5, h6 {
-    margin-top: 2rem;
     font-weight: bold;
+    margin-top: 2.5rem;
+    margin-bottom: .5rem;
+  }
+
+  h1 {
+    font-size: 34px;
+  }
+
+  h2 {
+    font-size: 28px;
+  }
+
+  h3 {
+    font-size: 24px;
+  }
+
+  a {
+    color: inherit;
+    border-bottom: 2px dotted $c-primary;
+  }
+
+  a:hover {
+    border-bottom-style: solid;
   }
 }
