--- a/_sass/components/_social-share.scss
+++ b/_sass/components/_social-share.scss
@@ -20,12 +20,12 @@
 
   width: 100%;
   line-height: 2rem;
-  margin-right: 1rem;
+  margin-right: .5rem;
   font-size: 1rem;
 
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
