--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,7 @@
       <header>
         <h1 class="heading">{{ page.title }}</h1>
       </header>
+      <p class="meta-info">{{ page.publishdate }}</p>
       {{ content }}
     </article>
 
