--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -54,3 +54,20 @@ blockquote {
 	background-color: $c-primary;
 	text-shadow: none;
 }
+
+code {
+  background-color: rgba(0, 0, 0, 0.05);
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 3px;
+  font-size: 1rem;
+  margin: 0 .2rem;
+  padding: 0.25rem .7rem;
+  white-space: nowrap;
+}
+
+pre > code {
+  white-space: pre;
+  display: block;
+  padding: 1.0rem 1.5rem;
+  margin: 0;
+}
