--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -4,7 +4,7 @@
 p {
   font-weight: normal;
   font-size: 19px;
-  line-height: 1.5;
+  line-height: 1.6;
 
   margin-top: 0;
 }
@@ -13,7 +13,12 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $font-heading;
   font-weight: bold;
   font-style: normal;
-  line-height: 1.3;
+  line-height: 1.2;
 
   margin: 1rem 0;
+}
+
+h1 {
+  font-size: 2rem;
+
 }
