--- a/_sass/components/_post.scss
+++ b/_sass/components/_post.scss
@@ -2,8 +2,13 @@
   margin-bottom: 4rem;
 
   .heading {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
+  }
+
+  .meta-info {
+    font-size: .9rem;
+    opacity: .6;
   }
 
   h1, h2, h3, h4, h5, h6 {
