Major Layout change

--- a/_includes/c-disqus.html
+++ b/_includes/c-disqus.html
@@ -1,6 +1,9 @@
 {% if page.comments %}
 
-<button class="o-btn o-btn--full t6" id="load-comments">Ver comentários</button>
+<button class="o-btn o-btn--full" id="load-comments">
+  <i class="fa fa-commenting-o" aria-hidden="true"></i>
+  Deixar um comentário
+</button>
 <div id="disqus_thread"></div>
 
 <script>
