--- a/_includes/c-head.html
+++ b/_includes/c-head.html
@@ -20,6 +20,12 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Domine|Oswald:300,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cantata+One|Libre+Baskerville|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Playfair+Display" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Hind:400,700|Karla:400,700" rel="stylesheet">
+
+    <!-- Fontawesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ site.url }}/assets/css/styles.css">
