--- a/_sass/objects/_o-social-links.scss
+++ b/_sass/objects/_o-social-links.scss
@@ -1,10 +1,11 @@
 // Footer social links
 
 .social-links {
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 
   .social-links__icon {
-    margin: 0 1rem;
+    margin: 0 0.7rem;
     color: white;
+    text-decoration: none;
   }
 }
