--- a/_sass/variables/_others.scss
+++ b/_sass/variables/_others.scss
@@ -1,3 +1,5 @@
 // Other -------------------------
 $footer-height: 165px;
 $base-border: 2px solid rgba($c-primary, 0.1);
+
+$transition-modal: .4s;
