--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -26,15 +26,20 @@
 // Objects
 @import "objects/o-social-links";
 @import "objects/o-buttons";
+@import "objects/o-menu-toggle";
+@import "objects/o-page-title";
 
 
 // Components
 @import "components/c-nav-bar";
+@import "components/c-menu";
+@import "components/c-menu--modal";
 @import "components/c-footer";
 @import "components/c-social-share";
 @import "components/c-blog";
 @import "components/c-post";
 @import "components/c-cv";
+@import "components/c-meta-info";
 
 
 // Animations
