--- a/_includes/c-footer.html
+++ b/_includes/c-footer.html
@@ -19,16 +19,16 @@
             <i class="icon-doc-text" aria-hidden="true"></i>
           </a>
         </div>
-
-        <!-- <div class="c-footer__item">
-          <small class="s2">&copy; 2017 Pedro Britto</small>
-        </div> -->
-
       </div> <!-- /container -->
     </footer>
 
+    <footer class="c-footer--secondary l-footer--secondary">
+      <div class="c-footer__item">
+        <small class="s2">&copy; 2017 Pedro Britto</small>
+      </div>
+    </footer>
     <!-- Google Analytics -->
-    <script>
+    <script async>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -39,5 +39,7 @@
     </script>
     <!-- /Google Analytics -->
 
+    <!-- Scripts -->
+    <script type="text/javascript" src="{{ site.url }}/assets/js/scripts.js"></script>
   </body>
 </html>
