--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,6 @@
               <div class="l-container">
                 <h1 class="post__title">{{ page.title }}</h1>
                 <p class="post__subtitle">{{ page.subtitle }}</p>
-                <p class="post__meta s1">{{ page.publishdate }}</p>
               </div>
             </div>
           </div>
@@ -19,6 +18,7 @@
 
         <div class="l-container">
           <article class="post__content">
+            <p class="meta-info__date s1">{{ page.publishdate }}</p>
             {{ content }}
           </article>
 
