--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -1,3 +1,4 @@
-.u-mb1 {
-  margin-bottom: 1rem !important;
-}
+.u-mb1 { margin-bottom: 1rem !important; }
+.u-m0 { margin: 0; }
+
+.u-align-right { text-align: right; }
