--- a/_sass/components/_c-nav-bar.scss
+++ b/_sass/components/_c-nav-bar.scss
@@ -1,5 +1,6 @@
 .l-nav-bar {
-  padding: 20px 0;
+  padding: 1rem 0;
+  color: $c-secondary;
 
   .l-container {
   display: flex;
@@ -11,32 +12,10 @@
 
 .c-nav-bar {
   background-color: white;
-  box-shadow: -2px 2px 81px -27px rgba(0, 0, 0, 0.19);
-
-  &__logo {
-    font-family: $font-heading;
-  }
 }
 
-
-
-.c-nav-bar__menu {
-  font-size: 1.033rem;
-  font-family: $font-heading;
-  line-height: 0;
-}
-
-
-
-.l-menu__item {
-  padding: .25rem 0;
-  margin: 0 .5rem;
-}
-
-.o-menu__item {
-  border-bottom: 1px solid transparent;
-
-  &:hover {
-    border-bottom-color: $c-primary;
-  }
+.logo__text {
+  font-family: $font-body;
+  font-weight: bold;
+  text-decoration: none;
 }
