--- a/_sass/variables/_colors.scss
+++ b/_sass/variables/_colors.scss
@@ -1,7 +1,13 @@
 // Colors
 
-$c-blue: #54afe9;
+$c-blue: #557ae8;
+$c-pink: #F23E69;
 
-$c-primary: #4c89f1;
 $c-font-dark: #424242;
 $c-font-light: #fff;
+
+
+// Color Usage ————————————————————
+
+$c-primary: #313137;
+$c-secondary: $c-pink;
