--- a/_includes/c-footer.html
+++ b/_includes/c-footer.html
@@ -7,16 +7,13 @@
             <i class="icon-github" aria-hidden="true"></i>
           </a>
           <a class="social-links__icon" href="http://codepen.io/pedrobritto/" title="Codepen">
-            <i class="icon-codepen" aria-hidden="true"></i>
+            <i class="icon-codeopen" aria-hidden="true"></i>
           </a>
           <a class="social-links__icon" href="https://www.linkedin.com/in/pedro-britto/" title="LinkedIn">
             <i class="icon-linkedin" aria-hidden="true"></i>
           </a>
           <a class="social-links__icon" href="mailto:pedroivobritto@gmail.com" title="Email">
-            <i class="icon-mail" aria-hidden="true"></i>
-          </a>
-          <a class="social-links__icon" href="{{ site.url }}/cv/" title="Meu Currículo">
-            <i class="icon-doc-text" aria-hidden="true"></i>
+            <i class="icon-mail-alt" aria-hidden="true"></i>
           </a>
         </div>
       </div> <!-- /container -->
