--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -3,6 +3,7 @@
 
 // Libs and Helpers
 @import "lib/normalize";
+@import "lib/modularscale";
 @import "helpers/helpers";
 
 
@@ -20,6 +21,7 @@
 
 // Layouts
 @import "layouts/layouts";
+@import "layouts/container";
 @import "layouts/grids";
 
 
