--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,13 +9,13 @@
       {% for post in site.posts %}
 
       <article class="post-summary">
-        <h2 class="post-summary__title t3">
-          <a href="{{ post.url }}">
-            <div class="post-summary__image"
-              style="background-image: url({{ site.url }}/assets/img/posts/{{ post.image }})"
-            ></div>
-          </a>
-          <a class="post-summary__title" href="{{ post.url }}">{{ post.title }}</a>
+        <a href="{{ post.url }}">
+          <div class="post-summary__image"
+            style="background-image: url({{ site.url }}/assets/img/posts/{{ post.image }})"
+          ></div>
+        </a>
+        <h2 class="post-summary__title t2">
+          <a href="{{ post.url }}">{{ post.title }}</a>
         </h2>
 
         <div class="meta-info__date">{{ post.publishdate }}</div>
