--- a/_sass/base/_icons.scss
+++ b/_sass/base/_icons.scss
@@ -41,29 +41,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-mail:before { content: '\e800'; } /* '' */
+.icon-comment:before { content: '\e800'; } /* '' */
+.icon-mail:before { content: '\e801'; } /* '' */
+.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-facebook:before { content: '\f09a'; } /* '' */
+.icon-github-alt:before { content: '\f09b'; } /* '' */
+.icon-mail-alt:before { content: '\f0e0'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-doc-text:before { content: '\f0f6'; } /* '' */
 .icon-github:before { content: '\f113'; } /* '' */
-.icon-codepen:before { content: '\f1cb'; } /* '' */
-
-// Social Share
-
-@font-face {
-  font-family: 'si';
-  src: url('../font/socicon.eot');
-  src: url('../font/socicon.eot?#iefix') format('embedded-opentype'),
-       url('../font/socicon.woff') format('woff'),
-       url('../font/socicon.ttf') format('truetype'),
-       url('../font/socicon.svg#icomoonregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
-
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family:si;
-    src: url(../font/socicon.svg) format(svg);
-  }
-}
+.icon-codeopen:before { content: '\f1cb'; } /* '' */
+.icon-comment-alt:before { content: '\f27a'; } /* '' */
