--- a/_sass/components/_c-menu.scss
+++ b/_sass/components/_c-menu.scss
@@ -1,7 +1,7 @@
 .c-menu {
-  font-size: 1.033rem;
   font-family: $font-body;
-  line-height: 0;
+  font-weight: bold;
+  line-height: 1;
 
   display: none;
 
@@ -12,16 +12,22 @@
 
 .l-menu__item {
   padding: .25rem 0;
-  margin: 0 .5rem;
+  margin-right: 0.6rem;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .o-menu__item {
-  font-size: 16px;
+  font-size: .8rem;
   text-decoration: underline;
   text-decoration-skip: ink;
   text-decoration-color: transparent;
+  opacity: .8;
 
-  &:hover {
-    text-decoration-color: $c-secondary;
+  &:hover,
+  &:active {
+    opacity: 1;
   }
 }
