--- a/_sass/components/_c-post.scss
+++ b/_sass/components/_c-post.scss
@@ -27,20 +27,26 @@
 }
 
 .post__title {
-  font-size: 2rem;
+  font-size: ms(1);
 
   @include mappy-bp(small) {
-    font-size: 2.488rem;
+    font-size: ms(2);
   }
 
   @include mappy-bp(large) {
-    font-size: 3.5rem;
+    font-size: ms(3);
   };
 }
 
-
 .post__content {
   padding: 3rem 0;
+
+  & p:first-of-type {
+    font-size: 1.2rem;
+    font-weight: bold;
+    font-style: italic;
+    line-height: 1.1;
+  }
 }
 
 .post__footer {
