--- a/_sass/components/_c-social-share.scss
+++ b/_sass/components/_c-social-share.scss
@@ -1,48 +1,33 @@
-.social {
+.c-social-share {
   display: flex;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  margin-bottom: 1rem;
+
+  &__item {
+    font-size: 1rem;
+    line-height: 1;
+    background: $c-secondary;
+    padding: 0.4rem 0;
+    border-radius: 2px;
+    flex: 1;
+    line-height: 1;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+
+    transition: $transition-default;
+
+    &:hover {
+      opacity: .8;
+    }
+
+    &:not(:last-child) {
+      margin-right: 5px;
+    }
+  }
 }
 
-.social li {
-  display: flex;
-  flex: 1; // from .social
-  zoom: 1;
-}
 
-.social li a {
-  // flex: 1; // from .social li
-  font-family: si!important;
-  font-style: normal;
-  font-weight: 400;
-
-  width: 100%;
-  line-height: 2rem;
-  margin-right: .5rem;
-  font-size: 1rem;
-
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-
-  overflow: hidden;
-  text-decoration: none;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-
-  color: #ffffff;
-  background-color: none;
-}
-
-.social-icon-last {
-  margin:0 !important;
-}
+// old styles
 
 .social-facebook {
   background-color: #3e5b98;
@@ -55,22 +40,4 @@
 }
 .social-twitter:before {
   content:'\e040';
-}
-.social-linkedin {
-  background-color: #3371b7;
-}
-.social-linkedin:before {
-  content:'\e049';
-}
-.social-mail {
-  background-color: #525252;
-}
-.social-mail:before {
-  content:'\e01f';
-}
-.social-whatsapp {
-  background-color: #20B038;
-}
-.social-whatsapp:before {
-  content:'\e01b';
 }
